[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'pyvista-no-vtk'
description = 'Easier Pythonic interface to VTK'
authors = [
    {name = 'PyVista Developers', email = 'info@pyvista.org'},
]
readme = '../README.rst'
requires-python = '>=3.8'
keywords = ['vtk', 'numpy', 'plotting', 'mesh']
license = {text = 'MIT'}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dependencies = [
    'matplotlib>=3.0.1',
    'numpy>=1.21.0',  # minimum typing support
    'pillow',
    'pooch',
    'scooby>=0.5.1',
    'typing-extensions',
    # NOTE: we explicitly do not depend on PyVsita here to
    # better support different VTK variants
]
dynamic = ['version']

[project.optional-dependencies]
all = ['pyvista[colormaps,io,jupyter]']
colormaps = [
    'cmocean',
    'colorcet',
]
io = [
    'imageio',
    'meshio>=5.2'
]
jupyter = [
    'ipywidgets',
    'jupyter-server-proxy',
    'nest_asyncio',
    'trame>=2.5.2',
    'trame-client>=2.12.7',
    'trame-server>=2.11.7',
    'trame-vtk>=2.5.8',
    'trame-vuetify>=2.3.1',
]

[project.urls]
Documentation = 'https://docs.pyvista.org/'
"Bug Tracker" = 'https://github.com/pyvista/pyvista/issues'
"Source Code" = 'https://github.com/pyvista/pyvista'

[tool.setuptools.dynamic]
version = {attr = 'pyvista._version.__version__'}

[tool.setuptools.packages.find]
where = [".."]
include = [
    'pyvista',
    'pyvista.*',
]

[tool.setuptools.package-data]
pyvista = [
    'py.typed',
]
"pyvista.examples" = [
    '2k_earth_daymap.jpg',
    'airplane.ply',
    'ant.ply',
    'channels.vti',
    'globe.vtk',
    'hexbeam.vtk',
    'nut.ply',
    'pyvista_logo.png',
    'rectilinear.vtk',
    'sphere.ply',
    'uniform.vtk',
    'frog_tissues.vti',
]
